--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Microsoft Clone</title>
+    <title>Microsoft – 官方首頁</title>
   </head>
   <body>
   <div class="menu-btn">
@@ -22,15 +22,19 @@
       <img src="https://i.ibb.co/wwLhz98/logo.png" alt="Microsoft" class="logo">
 
       <ul class="main-menu show">
+        <li><a href="#">Microsoft 365</a></li>
         <li><a href="#">Office</a></li>
         <li><a href="#">Windows</a></li>
         <li><a href="#">Surface</a></li>
         <li><a href="#">Xbox</a></li>
-        <li><a href="#">Deals</a></li>
-        <li><a href="#">Support</a></li>
+        <li><a href="#">支援</a></li>
+
       </ul>
 
       <ul class="right-menu">
+        <li>
+          <a href="#">所有 Microsoft <i class="fas fa-chevron-down"></i>    </a>
+        </li>
         <li>
           <a href="#">
             <i class="fas fa-search"></i>
@@ -46,106 +50,128 @@
 
     <!-- Showcase -->
     <header class="showcase">
-      <h2>Surface Deals</h2>
+      <div>
+      <li class="l" onclick="changeImage()">
+        <a href="#"><i class="fas fa-chevron-right"></i></a></li>
+      <li class="r" onclick="changeImage(1)">
+        <a href="#"><i class="fas fa-chevron-left"></i></a></li>
+      </div>
+        <h2>新上市的 Surface Laptop 4</h2>
       <p>
-        Select Surfaces are on sale now - save while supplies last
+        運用完美結合時尚外型、超薄設計、多工速度和增強效能的裝置，一手包辦
       </p>
       <a href="#" class="btn">
-        Shop Now <i class="fas fa-chevron-right"></i>
+        立即選購 <i class="fas fa-chevron-right"></i>
       </a>
     </header>
+
+    <!-- Showcase2 -->
+    <div class="showcase2">
+      <div>
+        <img src="./img/11.png" alt="" style="display:block; margin:auto;">
+        <li><a href="#" >選擇您的 Microsoft 365
+         </a></li>
+      </div>
+      <div>
+        <img src="./img/12.png" alt="" style="display:block; margin:auto;">
+        <li><a href="#" >選購 Surface 裝置
+         </a></li>
+      </div>
+      <div>
+        <img src="./img/13.png" alt="" style="display:block; margin:auto;">
+        <li><a href="#" > 選購 Windows 10
+         </a></li>
+      </div>
+    </div>
 
     <!-- Home cards 1 -->
     <section class="home-cards">
       <div>
-        <img src="https://i.ibb.co/LZPVKq9/card1.png" alt="">
-        <h3>New Surface Pro 7</h3>
+        <img src="./img/2-1.jpg" alt="">
+        <h3>Surface Laptop Go</h3>
         <p>
-          See how Katie Sowers, Asst. Coach for the 49ers, uses Surface Pro 7
-            to put her plans into play.
+          運用時尚和效能兼具、最輕巧的 Surface 筆記型電腦，善加利用每一天。
         </p>
-        <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+        <a href="#"> 立即選購  <i class="fas fa-chevron-right"></i></a>
       </div>
       <div>
-        <img src="https://i.ibb.co/KjGFHVJ/card2.png" alt="" />
-        <h3>New Surface Laptop 3</h3>
+        <img src="./img/2-2.jpg" alt="" />
+        <h3>Microsoft 365</h3>
         <p>
-          Express yourself powerfully with a thin, light, and elegant design,
-          faster performance, and up to 11.5 hours battery life.
+          進階版 Office 應用程式、額外的雲端儲存空間、進階安全性等功能，全都在一個方便的訂閱中。
         </p>
-        <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+        <a href="#">最多可供 6 人使用 <i class="fas fa-chevron-right"></i></a>
+        <a href="#">適合 1 人使用 <i class="fas fa-chevron-right"></i></a>
       </div>
       <div>
-        <img src="https://i.ibb.co/2cnshH6/card3.png" alt="" />
-        <h3>Save $150 + free controller</h3>
+        <img src="./img/2-3.jpg" alt="" />
+        <h3>Microsoft Teams</h3>
         <p>
-          Buy an Xbox One X console and double your fun with a free select
-          extra controller. Starting at $349.
+          與親朋好友一起聊天、通話和擬定計劃，全都在一個應用程式。
         </p>
-        <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+        <a href="#">深入了解  <i class="fas fa-chevron-right"></i></a>
       </div>
       <div>
-        <img src="https://i.ibb.co/G57P0Pb/card4.png" alt="" />
-        <h3>The new Microsoft Edge</h3>
+        <img src="./img/2-4.jpg" alt="" />
+        <h3>Xbox Game Pass Ultimate</h3>
         <p>
-          Expect more. World class performance, with more privacy, more
-          productivity, and more value.
+          Xbox Live Gold 和超過 100 款高品質的主機遊戲和電腦遊戲。 與好友同樂，並探索下一個最愛遊戲。
         </p>
-        <a href="#">Learn More <i class="fas fa-chevron-right"></i></a>
+        <a href="#">立即加入 <i class="fas fa-chevron-right"></i></a>
       </div>
     </section>
 
     <!-- Xbox -->
     <section class="xbox">
       <div class="content">
-        <h2>Xbox Game Pass Ultimate</h2>
-        <p>Xbox Game Pass Ultimate Xbox Live Gold and over 100 high-quality
-          console and PC games. Play together with friends.</p>
+        <h2>Microsoft Edge</h2>
+        <p> 在您瀏覽時提供世界級的效能，以及更多的隱私、更充足的生產力與更高的價值</p>
           <a href="#" class="btn">
-            Join Now <i class="fas fa-chevron-right"></i>
+            立即下載 <i class="fas fa-chevron-right"></i>
           </a>
       </div>
     </section>
 
+    <p class="aa">適用於商務</p>
+
     <!-- Home cards 2 -->
       <section class="home-cards">
         <div>
-          <img src="https://i.ibb.co/zVqhWn2/card5.png" alt="" />
-          <h3>Microsoft Teams</h3>
+          <img src="./img/4-1.jpg" alt="" />
+          <h3>適用於商務的 Surface</h3>
           <p>
-            Unleash the power of your team.
+            無論從事哪種工作，都有一款有助於成功的 Surface。
           </p>
-          <a href="#">Shop Now <i class="fas fa-chevron-right"></i></a>
+          <a href="#">立即選購 <i class="fas fa-chevron-right"></i></a>
         </div>
         <div>
-          <img src="https://i.ibb.co/mGZcxcn/card6.jpg" alt="" />
-          <h3>Unlock the power of learning</h3>
+          <img src="./img/4-2.jpg" alt="" />
+          <h3>Microsoft 365 商務版</h3>
           <p>
-            Get students future-ready with Windows 10 devices. Starting at $219.
+            透過功能強大的應用程式提高生產力、聯繫和安全，始終領先一步。
           </p>
-          <a href="#">Shop Now <i class="fas fa-chevron-right"></i></a>
+          <a href="#">立即選購 <i class="fas fa-chevron-right"></i></a>
         </div>
         <div>
-          <img src="https://i.ibb.co/NpPvVHj/card7.png" alt="" />
-          <h3>Windows 10 Enterprise</h3>
+          <img src="./img/4-3.jpg" alt="" />
+          <h3>Windows 10 企業版</h3>
           <p>
-            Download the free 90-day evaluation for IT professionals.
+            下載 IT 專業人員適用的 90 天免費評估版本。
           </p>
-          <a href="#">Download Now <i class="fas fa-chevron-right"></i></a>
+          <a href="#">立即下載 <i class="fas fa-chevron-right"></i></a>
         </div>
         <div>
-          <img src="https://i.ibb.co/LkP4L5T/card8.png" alt="" />
-          <h3>Explore Kubernetes</h3>
+          <img src="./img/4-4.jpg" alt="" />
+          <h3>Microsoft Viva 簡介</h3>
           <p>
-            Learn how Kubernetes works and get started with cloud native app
-            development today.
+            探索新的員工體驗平台，其設計旨在讓人員在工作時聯繫、專注、學習和成長。
           </p>
-          <a href="#">Get Started <i class="fas fa-chevron-right"></i></a>
+          <a href="#">深入了解 <i class="fas fa-chevron-right"></i></a>
         </div>
       </section>
       
       <!-- Carbon -->
-      <section class="carbon dark">
+      <!--<section class="carbon dark">
         <div class="content">
           <h2>Commiting To Carbon Negative</h2>
           <p>Microsoft will be carbon negative by 2030 and by 2050 we will remove
@@ -154,19 +180,16 @@
               Learn More <i class="fas fa-chevron-right"></i>
             </a>
         </div>
-      </section>
+      </section>-->
 
       <!-- Follow -->
       <section class="follow">
-        <p>Follow Microsoft</p>
+        <p>關注 Microsoft </p>
         <a href="https://facebook.com">
           <img src="https://i.ibb.co/LrVMXNR/social-fb.png" alt="Facebook">
         </a>
-        <a href="https://twitter.com">
-          <img src="https://i.ibb.co/vJvbLwm/social-twitter.png" alt="Twitter">
-        </a>
-        <a href="https://linkedin.com">
-          <img src="https://i.ibb.co/b30HMhR/social-linkedin.png" alt="Linkedin">
+        <a href="https://Youtube.com">
+          <img src="./img/youtube.png" alt="Youtube">
         </a>
       </section>
     </div>
@@ -174,52 +197,54 @@
       <section class="links">
         <div class="links-inner">
           <ul>
-            <li><h3>What's New</h3></li>
-            <li><a href="#">Surface Pro X</a></li>
-            <li><a href="#">Surface Laptop 3</a></li>
-            <li><a href="#">Surface Pro 7</a></li>
-            <li><a href="#">Windows 10 apps</a></li>
-            <li><a href="#">Office apps</a></li>
+            <li><h3>最新動向</h3></li>
+            <li><a href="#">Microsoft 365</a></li>
+            <li><a href="#">Surface Go</a></li>
+            <li><a href="#">Surface Book 2</a></li>
+            <li><a href="#">Surface Pro</a></li>
+            <li><a href="#">Windows 10 應用程式</a></li>
           </ul>
           <ul>
             <li><h3>Microsoft Store</h3></li>
-            <li><a href="#">Account Profile</a></li>
-            <li><a href="#">Download Center</a></li>
-            <li><a href="#">Microsoft Store support</a></li>
-            <li><a href="#">Returns</a></li>
-            <li><a href="#">Older tracking</a></li>
+            <li><a href="#">帳戶設定檔</a></li>
+            <li><a href="#">下載中心</a></li>
+            <li><a href="#">Microsoft Store 支援</a></li>
+            <li><a href="#">退貨/退款</a></li>
+            <li><a href="#">訂單追蹤</a></li>
           </ul>
           <ul>
-            <li><h3>Education</h3></li>
-            <li><a href="#">Microsfot in education</a></li>
-            <li><a href="#">Office for students</a></li>
-            <li><a href="#">Office 365 for schools</a></li>
-            <li><a href="#">Deals for studentss</a></li>
-            <li><a href="#">Microsfot Azure</a></li>
+            <li><h3>教育</h3></li>
+            <li><a href="#">Microsoft 在教育領域的應用</a></li>
+            <li><a href="#">學生適用的 Office</a></li>
+            <li><a href="#">學校適用的 Office 365</a></li>
+            <li><a href="#">Microsoft Azure 在教育領域的應用</a></li>
           </ul>
           <ul>
-            <li><h3>Enterprise</h3></li>
+            <li><h3>企業</h3></li>
             <li><a href="#">Azure</a></li>
             <li><a href="#">AppSource</a></li>
-            <li><a href="#">Automotive</a></li>
-            <li><a href="#">Government</a></li>
-            <li><a href="#">Healthcare</a></li>
+            <li><a href="#">汽車</a></li>
+            <li><a href="#">政府機構</a></li>
+            <li><a href="#">醫療保健</a></li>
+            <li><a href="#">製造</a></li>
+            <li><a href="#">金融服務</a></li>
+            <li><a href="#">零售</a></li>
           </ul>
           <ul>
-            <li><h3>Developer</h3></li>
-            <li><a href="#">Visual Studio</a></li>
-            <li><a href="#">Windowszs Dev Center</a></li>
-            <li><a href="#">Developer Network</a></li>
-            <li><a href="#">TechNet</a></li>
-            <li><a href="#">Microsoft Developer</a></li>
+            <li><h3>開發人員</h3></li>
+            <li><a href="#">Microsoft Visual Studio</a></li>
+            <li><a href="#">Windows 開發人員中心</a></li>
+            <li><a href="#">開發人員中心</a></li>
+            <li><a href="#">Microsoft 開發人員計畫</a></li>
+            <li><a href="#">Channel 9</a></li>
           </ul>
           <ul>
-            <li><h3>Company</h3></li>
-            <li><a href="#">Careers</a></li>
-            <li><a href="#">About Microsoft</a></li>
-            <li><a href="#">Company news</a></li>
-            <li><a href="#">Privacy at Microsoft</a></li>
-            <li><a href="#">Inverstors</a></li>
+            <li><h3>公司</h3></li>
+            <li><a href="#">人才招募</a></li>
+            <li><a href="#">公司新聞</a></li>
+            <li><a href="#">Microsoft 隱私權</a></li>
+            <li><a href="#">投資者</a></li>
+            <li><a href="#">安全性</a></li>
           </ul>
         </div>
       </section>
@@ -227,16 +252,14 @@
       <!-- Footer -->
       <footer class="footer">
         <div class="footer-inner">
-          <div><i class="fas fa-globe fa-2x"></i> English (United States)</div>
+          <div><i class="fas fa-globe-americas"></i> 中文(台灣)  </div>
           <ul>
-            <li><a href="#">Sitemap</a></li>
-          <li><a href="#">Contact Microsoft</a></li>
-          <li><a href="#">Privacy & cookies</a></li>
-          <li><a href="#">Terms of use</a></li>
-          <li><a href="#">Trademarks</a></li>
-          <li><a href="#">Safety & eco</a></li>
-          <li><a href="#">About our ads</a></li>
-          <li><a href="#">&copy; Microsoft 2020</a></li>
+          <li><a href="#">連絡 Microsoft</a></li>
+          <li><a href="#">隱私權</a></li>
+          <li><a href="#">使用規定</a></li>
+          <li><a href="#"> 商標</a></li>
+          <li><a href="#">有關我們的廣告訊息</a></li>
+          <li><a href="#">&copy;  Microsoft 2021</a></li>
           </ul>
         </div>
       </footer>
